Added privacy policy

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+  <script type="text/javascript">
+    var _iub = _iub || [];
+    _iub.csConfiguration = {
+      floatingPreferencesButtonDisplay: false
+    };
+  </script>
+  <script type="text/javascript"
+    src="https://embeds.iubenda.com/widgets/2481ab4b-7f6b-45b2-9102-eab9bf959376.js"></script>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <link rel="apple-touch-icon" href="/logo.svg" />
@@ -10,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#147B75" />
-  <meta name="description" content="Budge Up - Student Financial Forecasting" />
+  <meta name="description" content="Money clarity for student life" />
   <title>Budge Up</title>
 </head>
 
