Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
   <meta name="theme-color" content="#147B75" />
   <meta name="description" content="Money clarity for student life" />
   <title>Budge Up</title>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J8Z25XN9ZS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-J8Z25XN9ZS');
+  </script>
 </head>
 
 <body>
